public/stylesheets/main.css
/*************************************/
/*** G E N E R A L   S T Y L I N G ***/
/*************************************/

/* Catch-all styles. */

html, body {
  height: 100%;
}

body {
  background: url("/images/background_tartan.png");
  font-family: "Trebuchet MS", Verdana, Helvetica, sans-serif;
}

body, p, ol, ul, td {
  font-size: 13px;
  line-height: 22px;
}

pre {
  background-color: #ddd;
  padding: 10px;
  font-size: 11px;
}

div#wrapper {
  background-color: white;
  width: 800px;
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -75px;
}

div#header {
  border-bottom: 1px solid #DDD;
}

div#footer {
  background-color: #fafafa;
  color: #666;
  width: 800px;
  margin: 0 auto;
  font-family: arial;
}

div#footer > div#footer_internals {
  border-top: 1px solid #ddd;
}

div#footer > div#footer_internals > p {
  line-height: 74px;
  margin-right: .75em;
  text-align: center;
}

div#footer > div#footer_internals a {
  color: #bbb;
  text-decoration: none;
}

div#footer, div#pusher {
  height: 75px;
}

.clear_after:after {
  content: ".";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
}

/* Content styling. */

div#content {
  color: #2b2b2b;
  padding: 1.5em;
}

div#content p, div#content pre {
  margin-bottom: .75em;
}

div#content ol, div#content ul {
  margin-bottom: .75em;
}

div#content ol {
  list-style-type: decimal;
}

div#content ul {
  list-style-type: disc;
}

div#content li {
  margin: 0 .5em 0 2.5em;
}

/* Error styling. */

.fieldWithErrors {
  color: #c00;
}

#errorExplanation {
  width: 80%;
  margin: 0 auto 1em;
  border: 1px solid #ccc;
  background-color: #fafafa;
}

#errorExplanation h2 {
  background-color: #ddd;
  color: #c00;
  padding: .25em;
  border-bottom: 1px solid #ccc;
  text-align: center;
}

#errorExplanation p {
  margin: .5em !important;
}

/* Flash message styling. */

p#flash {
  width: 80%;
  margin: 0 auto 1em;
  padding: .25em;
  border: 1px solid #bdd8bd;
  background-color: #efe;
  text-align: center;
}

/*******************************/
/*** P O S T   S T Y L I N G ***/
/*******************************/

/* Styling for buttons for posts. */

div#edit_post_buttons {
  margin-top: .75em;
}

div#edit_post_buttons > form {
  float: left;
}

div.pagination {
  text-align: right;
  font-family: arial;
}

/* Styling for individual post display. */

div.post {
  margin-top: 1.5em;
}

div.post_date {
  color: #ddd;
  font: 125% palatino, georgia, serif;
  letter-spacing: .25em;
  text-align: center;
  margin-top: 1.5em;
  border-bottom: 1px solid #eee;
}

div.post > h3 {
  font: 150% palatino, georgia, serif;
  letter-spacing: .2em;
  margin: 1.25em 0 .75em;
}

div.post > h3 > a {
  color: #2b2b2b;
  text-decoration: none;
}

div.post > h3 > a:hover {
  text-decoration: underline;
}

div.post div.post_body {
  font-family: arial;
}

div.post div.post_body a {
  background: transparent url("/images/external.png") no-repeat scroll right center;
  padding-right: 13px;
}

div.post blockquote {
  border-left: 1px solid #ddd;
  padding-left: 1em;
}

div.post pre.prettyprint {
  overflow: auto;
  background-color: #fafafa;
  border: 1px solid #ddd;
  padding: .5em 1em;
  font-size: 90%;
}

div.post div.comments, div.post div#add_comment h3 {
  font-family: arial;
  font-weight: normal;
  letter-spacing: .5em;
  text-align: center;
  margin-top: .5em;
}

div.post div.comments a {
  color: #ddd;
  text-decoration: none;
}

div.post div.comments a:hover {
  color: #aaa;
}

div.post div#add_comment h3 a {
  color: #aaa;
  text-decoration: none;
}

div.post div#add_comment h3 a:hover {
  color: #777;
  text-decoration: none;
}

/* Styling for post forms. */

div#post_form form div {
  margin-bottom: .75em;
}

div#post_form form div[class~="fieldWithErrors"] {
  margin-bottom: 0;
}

div#post_form form div label {
  display: block;
  font-size: 90%;
}

div#post_form form div label[class~="required"]:before {
  content: "* ";
}

div#post_form form div input[type="text"], div#post_form form div textarea {
  width: 100%;
  font-size: 1.1em;
}

div#post_form form div input[type="submit"] {
  float: right;
}

/* Styling for comment forms. */

div#add_comment form textarea {
  width: 100%;
  height: 8em;
  font-size: 1.1em;
  margin-bottom: .5em;
}

div#add_comment form input#comment_submit {
  float: right;
}

